--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -200,6 +200,14 @@ int main(){
 
 ![](/img/214328.jpg)
 
+* 加减法电路
+
+  ![](/img/143336.jpg)
+
+  sub=1，一个作为控制信号传到多路选择器控制取反后的Y进入加法器，而另一个作为cin也就是低位的进位加到加法器
+
+  **最好会画**
+
 #### 浮点数
 
 * 浮点数的舍入
@@ -358,6 +366,87 @@ int main(){
 
 * 挂起态通常是由于终端用户请求、父进程请求、系统负荷调节或者操作系统自身需要等原因，将进程置于静止状态
 
+#### 系统调用
+
+* 从用户态到内核态
+  * 执行一条当前CPU不支持的指令
+    * 引发“非法指令”异常（内中断）
+    * 当CPU检测到无法识别的指令时，会强制从用户态切换到内核态，由操作系统内核处理该异常，因此，这会导致模式切换
+  * 地址非法/缺页
+  * 执行系统调用
+    * 执行系统调用会主动引发陷入（trap），使cpu从用户态切换到内核态
+  * 除数为0
+    * 引发算数异常（内中断），强制从用户态切换到内核态，由操作系统内核处理该异常
+
+#### 操作系统结构
+
+* ![](/img/201705.jpg)
+* 写入内核的驱动程序（静态驱动程序）再启动内核时架子啊，其他的在系统初始化时由内核加载，支持即插即用的设备再插入时加载，不支持即插即用的驱动程序需要手动安装。驱动程序的加载过程中需要申请中断号并且注册中断向量表。
+
+#### 操作系统引导过程
+
+* ①激活CPU。
+  按下开机键，电源开始向主板供电，CPU收到一个reset信号，开始复位初始化，读取内存ROM中的BIOS程序（固化在芯片中的程序），将IR设置为BIOS的第一条指令并开始执行（CPU初始化后执行的第一条指令）
+  
+* ②硬件自检。
+  BIOS构建中断向量表，开始POST（通电自检/硬件自检）
+  
+* ③加载带有操作系统的硬盘。
+  硬件自检完成后，BIOS开始读取Boot Sequence，找到启动顺序排在第一位的存储设备，将控制权转交给下一阶段的启动程序，然后CPU将该存储设备引导扇区的内容加载到内存中
+  
+* ④加载主引导记录（MBR）
+  计算机读取该设备的第一个扇区，也就是前512B（主引导记录MBR），如果这512B的最后两个字节是0x55和0xAA，说明这个设备可以用于启动；如果不是，表明设备不能用于启动，控制权于是被转交给启动顺序中的下一个设备，如无其他启动设备，就会死机。主引导记录的作用是告诉计算机到硬盘的哪一个位置去找操作系统。
+  主引导记录包括①调用操作系统的机器码②分区表③主引导记录签名
+  
+* ⑤扫描硬盘分区表，并加载硬盘活动分区。
+  MBR包含硬盘分区表，硬盘分区表以特定的标识符区分活动分区和非活动分区（第一个字节如果为0x80，则代表该主分区是激活分区，控制权要转交给这个分区，n个分区中只能有一个是激活的）。主引导记录MBR扫描硬盘分区表，进而识别含有操作系统的硬盘分区（活动分区）。找到硬盘活动分区后，开始加载硬盘活动分区，将控制权交给活动分区。
+  
+  * MBR 是硬盘的第一个扇区，其大小为 512 字节，通常位于硬盘的最前面。它独立于于任何分区，它是硬盘的“引导区域”，用于存储启动引导信息和硬盘的分区表。
+  
+* ⑥加载分区引导记录PBR。
+  读取活动分区的第一个扇区，这个扇区称为分区引导记录（PBR），其作用是寻找并激活分区根目录下用于引导操作系统的程序（启动管理器）。
+  
+  * **MBR的机器码**：计算机开机后，CPU 会首先读取硬盘的 MBR。MBR 中的机器码检查分区表，识别活动分区，假设活动分区是分区 1。
+    
+    **PBR的机器码**：MBR 将控制权交给分区 1 的第一个扇区（即 PBR）。PBR 中的引导程序负责加载操作系统的引导程序（例如，GRUB 或 Windows 启动管理器）。
+    
+    **操作系统引导程序**：PBR 会启动操作系统引导程序，操作系统的内核就会被加载到内存中，并完成操作系统的初始化。
+  
+* ⑦加载启动管理器。分区引导记录PBR搜索活动分区的启动管理器
+
+* ⑧加载操作系统。将操作系统的初始化程序加载到内存中执行
+  顺序：BIOS通过bootsequence→硬盘通过MBR→分区通过PBR→操作系统引导程序
+
+![](/img/02931.jpg)
+
+![](/img/180815.jpg)
+
+![](/img/80856.jpg)
+
+* PBR和操作系统引导程序的关系：
+
+  * PBR 通常包含以下几部分内容：
+
+    - **引导程序（Boot Loader）**：
+      - 这是 PBR 中的主要内容，包含了用于引导操作系统的机器码。通常这个引导程序会非常小，负责将操作系统的更大部分（如启动管理器或操作系统内核）加载到内存中。
+      - 引导程序也会通过加载操作系统的启动管理器（如 **GRUB** 或 **Windows 引导程序**），进一步引导系统进入操作系统内核的启动过程。
+    - **文件系统信息**：
+      - PBR 中也可能包含一些与分区文件系统相关的信息，比如分区的类型（如 FAT32、NTFS、EXT4 等）和一些文件系统的启动信息，这样操作系统的引导程序才能理解如何访问分区内的数据。
+    - **操作系统引导程序的地址**：
+      - 在 PBR 中，引导程序会知道如何找到并加载操作系统的主引导程序。通常这包括操作系统内核或者启动管理器的文件路径和位置。这个过程对于多操作系统的启动至关重要。
+    - **引导记录签名**：
+      - PBR 的最后 2 字节通常是 **0x55AA**，这个签名用于验证该扇区是否有效。如果 PBR 中的签名正确，表示该分区有一个有效的引导记录，可以继续加载操作系统。否则，启动过程会失败。
+
+  * **PBR** 读取并执行内嵌的引导程序，该程序负责将操作系统的启动程序加载到内存中。
+
+    启动程序（如 **GRUB** 或 **Windows 引导程序**）加载操作系统的内核到内存并启动操作系统。
+
+  * **PBR** 是活动分区的第一个扇区，包含了启动操作系统所需的引导程序。
+
+    **PBR 中的引导程序**会加载操作系统的主引导程序（如 GRUB 或 Windows 启动管理器），进而启动操作系统。
+
+    **引导操作系统的程序**通常是非常小的，它的主要任务是将操作系统的核心部分加载到内存中，并确保操作系统能够正确启动。
+
 ### 进程和线程
 
 #### 互斥
@@ -370,9 +459,31 @@ int main(){
 
 * 创建共享内存需要通过系统调用实现，需要先进入内核态，内核在物理内存中分配一块连续区域，指定共享内存的访问权限（如读写权限）和大小，然后进程再通过系统调用将共享内存映射到自己的虚拟地址空间。
 
+* **408范围内只有记录型信号量和管程（条件变量）可以实现让权等待**
+
+* **条件变量和信号量的重要区别**
+
+  ![](/img/22546.jpg)
+
+  ![](/img/22559.jpg)
+
+  * 条件变量**没有值**，仅实现了**排队等待**的功能；信号量是**有值**的，信号量的值反映了**剩余资源数**。
+    * 在管程中，剩余资源数用共享数据结构记录
+  * 条件变量的wait/signal操作与信号量不同，如果在管程中的一个进程发信号，但没有在这个条件变量上等待的任务，则丢弃这个信号
+    * 条件变量的设计目的是在特定条件下让线程等待，并在条件满足时唤醒等待线程。信号的丢弃防止了不必要的唤醒，也避免了不必要的资源浪费
+
 #### 进程调度
 
 ![](/img/Cache_-248a4a6132183be9(1).png)
+
+* 进程调度的时机：
+  * 阻塞一个进程
+  * 中断返回之前
+    * 在每次系统调用和中断之后，标志位need_resched被例程检查，如果标志位为1，那么调度程序需要在此时被调用。
+      * need_resched是linux内核中的一个调度标志，用于标记当前的CPU是否需要进行进程切换（上下文切换）
+      * resched是re-schedule的缩写，意思是重新调度
+  * 终止一个进程
+* 内核锁属于内核数据结构，**内核临界区不能发生进程调用**
 
 #### 死锁
 
@@ -417,6 +528,68 @@ int main(){
 #### I/O软件层次结构
 
 * ![](/img/223932432.jpg)
+* **内核缓冲区和用户缓冲区之间的拷贝**由**设备独立性软件**实现，通常位于**系统调用服务程序**内，**系统调用服务程序属于设备独立性软件**的层次。**设备独立性软件**向用户提供**统一的设备I/O接口即系统调用**
+* 对**设备的统一操作接口**是由驱动程序向上层提供的
+* **I/O接口到内核缓冲区的数据传输代码在设备驱动程序里**
+* **检查对I/O设备的请求的合法性是在设备驱动程序里完成的**，比如对打印机进行读操作就是非法的，应该向I/O系统报告I/O请求出错。
+* **检查参数的合法性是在设备独立性软件实现的**
+* **所有跟设备相关的逻辑都由设备驱动程序实现**
+
+##### 设备独立性软件和设备驱动程序提供统一接口的区别
+
+* **设备独立性软件提供的接口面向应用**
+
+  * 设备独立性软件面向用户或文件曾提供统一逻辑接口，如统一使用read/write、open/close等系统调用去访问各种设备
+  * 设备独立性软件定义的是**用户可见、跨设备一致的I/O抽象接口**
+
+* **设备驱动程序提供的接口（面向硬件设备）**
+
+  *  接收来自设备独立性软件的统一I/O请求（如read/write），然后将其翻译为具体硬件的控制命令，并通过总线或控制器与设备交互
+  * **系统内部用于驱动特性设备的接口和实现**
+
+* ![](/img/21828.jpg)
+
+  ![](/img/222038.jpg)
+
+  ![](/img/22225.jpg)
+
+  ![](/img/222237.jpg)
+
+  ![](/img/22256.jpg)
+
+* ![](/img/6884ea46e022038c5f59ecf4(1).jpg)
+
+#### 缓冲区
+
+##### 单缓冲
+
+![](/img/201332.jpg)
+
+##### 双缓冲
+
+![](/img/201746.jpg)
+
+![](/img/201801.jpg)
+
+![](/img/01817.jpg)
+
+#### 磁盘
+
+* 交换区是将内存中的部分数据临时转移到磁盘上，以释放内存空间，从而让内存能运行更多的程序或处理更大的数据。增大交换区并不能减少I/O速度
+* 提高磁盘I/O速度的方法
+  * 设置磁盘缓冲区
+    * 磁盘缓冲区是内存中的一片区域，利用局部性原理，可以保留部分磁盘数据的拷贝，在命中时可以直接从磁盘缓冲区拿数据，无需磁盘I/O。
+      * 但是需要考量置换算法。
+      * 交付数据给用户的方式有两种：
+        * 数据交互
+          * 直接从磁盘缓冲区把数据传送到用户区
+        * 指针交付
+          * 只把磁盘缓冲区某区域的指针交付给进程，节省了数据的拷贝开销
+  * 提前读和延迟写
+    * 提前读是指把当前访问的盘块相邻的几个连续的盘快一起读入磁盘缓冲区，利用了空间局部性，命中时无需启动磁盘I/O
+    * 延迟写是指磁盘缓冲区的数据本应该立即写回磁盘，但考虑不久的将来该数据还会被访问，所以不会立即写回磁盘，而是会把它挂在空闲缓冲区队列的末尾，当有进程申请这片磁盘缓冲区时，才把该修改的内容写回磁盘，同样也可以减少I/O时间（其实是时间局部性）
+  * 优化物理块的分布
+    * 尽可能地为文件分配相邻的磁盘块，这样磁盘就无需多次寻道，减少I/O时间
 
 ### 内存管理
 
@@ -469,15 +642,22 @@ int main(){
 
 * 页号=物理地址/页大小
 
+##### 是否会产生内外碎片总结
+
+![](/img/182234.jpg)
+
+![](/img/82330.jpg)
+
 #### 内存映射文件
 
 ![](/img/221511.jpg)
 
 * 内存映射文件利用了操作系统的请求调页基址。当文件被映射时，并不会立即将其全部内容调入物理内存。只有当进程实际访问到映射区域中的某个特定页面，而该页面尚未在物理内存中时，才会触发缺页中断，操作系统再负责将对应的文件部分从磁盘调入物理内存。这种按需调页的方式使得可以映射远大于可用物理内存的文件
+* **创建共享内存**需要通过**系统调用**实现，需要先进入**内核态**，内核在**物理内存中**分配一块**连续区域**，指定共享内存的**访问权限（如读写权限）和大小**，然后**进程**再通过**系统调用**，将共享内存映射到自己的虚拟地址空间。因此**共享内存映射的建立**发生在**内核态**下。
+  * 在虚拟页式内存管理的操作系统中，**内存修改进程的页表**，将**指定的虚拟地址范围映射到共享内存的物理页框**。多个进程的虚拟地址可以不同，但最终指向同一物理内存。
+* 对**共享内存的读写**通常是在**用户态**下进行的。用户进程可以通过其**虚拟地址直接读写内存共享空间**
 
 ### 文件管理
-
-* inode不包含文件名，文件名存储在目录文件的目录项中，每个目录文件将文件名与inode号关联
 
 ![](/img/23115.jpg)
 
@@ -486,6 +666,64 @@ int main(){
 * 在引入索引节点（inode）的文件系统中，目录项通常包含文件名与该文件名对应的索引节点号。目录本身是一个包含这些目录项的文件。索引节点是存储文件元数据（如文件大小、权限、物理位置等）的数据结构，他们通常集中存放在磁盘的特定区域（索引节点区）。因此，目录是文件名到索引节点号的映射集合，而不是索引节点本身的有序集合。
 * 超级块通常在磁盘上有多个副本（备份）。主超级块通常位于文件系统的固定位置，而备份超级块则分布在文件系统的其他位置，如果主超级块损坏，系统可以尝试从备份中恢复。
 * ![](/img/203944.jpg)
+
+#### inode
+
+* inode不包含文件名，文件名存储在目录文件的目录项中，每个目录文件将文件名与inode号关联
+
+* 对于 **第一次打开文件**，操作系统必须去硬盘读取对应的 **inode**，而不依赖于内存中的 **inode 缓存**。即使是其他 inode 已经被调入内存，只要是 **第一次打开文件**，操作系统都需要去硬盘读取该文件的 inode。下面我进一步澄清这个过程：
+
+1. **第一次打开文件时必须去硬盘读取 inode**：
+
+- 当进程请求打开一个文件时，**文件系统必须找到该文件的 inode**，而 inode 存储着文件的元数据。
+- **即使其他 inode 已经被加载到内存中**（比如在之前访问其他文件时已经调入），**操作系统也不能直接假设该文件的 inode 已经在内存中**。这是因为 inode 的存储是**按块（block）**来组织的，多个 inode 可能会被存储在同一个块中。操作系统在读取一个 inode 时，实际上是将该块从硬盘加载到内存中，而不是只读取一个单独的 inode。
+
+2. **inode 缓存的作用**：
+
+- 操作系统会将访问过的 inode 缓存到内存中的 **inode 缓存**，以提高后续访问同一文件时的效率。**如果 inode 已经在内存中，操作系统可以直接从内存中获取**。
+- 然而，**第一次打开文件时**，因为该文件的 inode 还没有被缓存到内存中，操作系统就必须去硬盘上查找和加载该 inode。
+
+3. **不存在“先查看内存”的步骤**：
+
+- 虽然操作系统会维护一个 **inode 缓存**，但它**并不在第一次打开文件时先检查内存**。操作系统在打开文件时会直接通过文件的路径来定位 inode（通常是通过目录项与 inode 的映射关系）。如果这个 inode 不在内存中，操作系统会去硬盘读取。
+- 只有当文件的 inode 被加载到内存中后，才会通过 **inode 缓存**来提高后续对同一文件的访问效率。
+
+4. **总结**：
+
+- **第一次打开文件时**，操作系统**必须去硬盘读取 inode**，并将其加载到内存中。
+- 即使**其他 inode 已经在内存中**，也不能影响第一次打开文件的过程，因为**每个 inode 都是单独按块存储的**，而且操作系统无法预先知道该 inode 是否已经在内存中。
+- **inode 缓存**只在后续访问同一文件时提供帮助，减少了磁盘 I/O 操作。
+
+举个简单例子：
+
+1. **第一次打开文件**时，操作系统必须去磁盘读取该文件的 inode。它会读取硬盘的目录结构，找到 inode 所在的块，将该块读取到内存中。
+2. 以后如果再次访问相同的文件，操作系统就可以直接从内存中的 inode 缓存中获取 inode，避免了磁盘读取。
+
+#### 文件共享
+
+* **硬链接和原文件共享一个inode**，**软连接**是一个新的link文件，**有自己的inode**
+* count计数制的本质是该inode有几个主题共享
+* **硬链接不能跨文件系统使用，因为每个文件系统各自维护自己的inode数据结构和列表，而软连接存的是文件路径，可以跨文件使用**
+
+#### 磁盘空闲块的管理方法
+
+* 成组链表法
+
+  * 原理
+
+  ![](/img/jkk.drawio.png)
+
+  ![](/img/erwer.drawio.png)
+
+  ![](/img/200229.jpg)
+
+  * 分配
+
+  ![](/img/kongxiankuaifenpei.drawio.png)
+
+  * 回收
+
+  ![](/img/kongxiankuaihuishou.drawio.png)
 
 ## CN（计网）
 
@@ -503,6 +741,9 @@ int main(){
   * 每个分组独立路由，某个后继路由器故障后，发往该路由器的分组将失败，除非路由协议（如OSPF，RIP）能够检测到故障并找到一条不经过该路由器的新路径到达目的服务器，否则后续分组将无法到达
 * 报文交换
   * 如果报文已经完整到达某路由器，但是下一跳路由器故障，某路由器无法将报文转发出去。该报文可能会在某路由器的存储中因超时而丢弃，或者如果系统有动态路由能力且存在备用路径，可能会尝试重路由（但这超出了基本报文交换的范畴，更接近高级网络功能）。基本情况下可以认为报文受阻于某路由
+* **集线器**是**物理层设备**，会将收到的信号**广播到除接收端口以外的所有端口**。所有链接到集线器的设备共享同一个冲突域，因此**同一时间只能有一个设备发送数据，否则会发生冲突**
+* 过程特性定义了在物理连接的建立、维持和释放过程中，各种事件发生的合法顺序。
+* 在采用粗同轴电缆的**10BASE5以太网**规范中，**互相串联的中继器的个数不能超过4个，而且用4个中继器串联的5段通信介质中，只有3段可以挂接计算机，其余2段只能用作扩展通信范围的链路段，不能挂接计算机**
 
 ### 数据链路层
 
@@ -511,6 +752,10 @@ int main(){
 * 时延带宽积=传播时延*信号带宽
 * 交换机（或网桥）对终端设备透明，**不改变帧的MAC地址**。路由器在将IP数据报从一个网络转发到另一个网络时，需要重新封装数据链路层帧头，**此时源MAC地址是路由器出接口的MAC，目的MAC地址是下一跳或最终目标主机的MAC**
 * 传输数据量只用在意时间内发送方能发送多少，不需要在意对方收没收到
+* 数据链路层帧尾部的帧检验字段（FCS）会检验包括IP分片在内的整个帧的内容。一旦发生比特差错，数据链路层在收到该帧时就会因FCS校验失败而发现错误并将其丢弃。
+  * **网络的IP头部检验和只管头部，不管数据**
+* CRC循环冗余码，如果首位是 1，就商 1；如果首位是 0，就商 0。
+* **交换机**是**数据链路层设备**，**每个端口都是一个独立的冲突域**，当端口连接单个设备时，可以工作在**全双工模式下，同时收发数据而不会发生冲突**。
 
 #### CSMA/CA
 
@@ -520,7 +765,20 @@ int main(){
 
 ![](/img/32244.jpg)
 
+#### CSMA/CD
+
+* 路由器是网络层设备，只认识目的主机的IP地址，**无法看见链路层的AP**，因此如果ARP表为空，会广播ARP请求报文，获取目的主机的MAC地址
+* **路由器发到AP的是以太网帧，AP将以太网帧转换成802.11帧后转发**
+
 ### 网络层
 
 * 路由器在查找路由表时使用最长前缀匹配原则来确定最佳路由。交换机在查找MAC地址表时，是进行**精准匹配**，级查找与帧目的MAC地址完全相同的表项。如果找不到，则泛洪（对未知单播）。没有“最长匹配”的概念用于交换机的MAC地址表查找。
+* 虚电路只在网络层建立，TCP在传输层建立的只能叫可靠连接不能叫虚电路。
+* 虚电路服务于点到点的通信而非端到端的通信，因此两台主机之间的多条虚电路服务于主机，主机可以分配不同进程使用不同虚电路，因此虚电路不单独为某个进程服务，而是为多个进程服务。
+  * 只有一条虚电路也可以为不同进程服务
 
+* NAT路由器会修改源IP和源端口
+
+### 应用层
+
+* FTP协议在整个会话期间，只使用一条TCP连接来传输控制命令（如登录、改变目录、上传/下载文件的请求等），这个连接在会话开始时建立，在会话结束时关闭。**每当有一次实际的文件传输（无论是上传还是下载）发生时，FTP都会新建一条临时的TCP数据连接，文件传输完成后，该数据连接就会关闭。**
