--- a/source/_posts/操作系统.md
+++ b/source/_posts/操作系统.md
@@ -334,6 +334,66 @@ math: true
 
 ![](/img/073847.jpg)
 
+##### 总结
+
+* ①激活CPU。
+  按下开机键，电源开始向主板供电，CPU收到一个reset信号，开始复位初始化，读取内存ROM中的BIOS程序（固化在芯片中的程序），将IR设置为BIOS的第一条指令并开始执行（CPU初始化后执行的第一条指令）
+  
+* ②硬件自检。
+  BIOS构建中断向量表，开始POST（通电自检/硬件自检）
+  
+* ③加载带有操作系统的硬盘。
+  硬件自检完成后，BIOS开始读取Boot Sequence，找到启动顺序排在第一位的存储设备，将控制权转交给下一阶段的启动程序，然后CPU将该存储设备引导扇区的内容加载到内存中
+  
+* ④加载主引导记录（MBR）
+  计算机读取该设备的第一个扇区，也就是前512B（主引导记录MBR），如果这512B的最后两个字节是0x55和0xAA，说明这个设备可以用于启动；如果不是，表明设备不能用于启动，控制权于是被转交给启动顺序中的下一个设备，如无其他启动设备，就会死机。主引导记录的作用是告诉计算机到硬盘的哪一个位置去找操作系统。
+  主引导记录包括①调用操作系统的机器码②分区表③主引导记录签名
+  
+* ⑤扫描硬盘分区表，并加载硬盘活动分区。
+  MBR包含硬盘分区表，硬盘分区表以特定的标识符区分活动分区和非活动分区（第一个字节如果为0x80，则代表该主分区是激活分区，控制权要转交给这个分区，n个分区中只能有一个是激活的）。主引导记录MBR扫描硬盘分区表，进而识别含有操作系统的硬盘分区（活动分区）。找到硬盘活动分区后，开始加载硬盘活动分区，将控制权交给活动分区。
+  
+  * MBR 是硬盘的第一个扇区，其大小为 512 字节，通常位于硬盘的最前面。它独立于于任何分区，它是硬盘的“引导区域”，用于存储启动引导信息和硬盘的分区表。
+  
+* ⑥加载分区引导记录PBR。
+  读取活动分区的第一个扇区，这个扇区称为分区引导记录（PBR），其作用是寻找并激活分区根目录下用于引导操作系统的程序（启动管理器）。
+  
+* ⑦加载启动管理器。分区引导记录PBR搜索活动分区的启动管理器
+
+* ⑧加载操作系统。将操作系统的初始化程序加载到内存中执行
+  顺序：BIOS通过bootsequence→硬盘通过MBR→分区通过PBR→操作系统引导程序
+  
+* **MBR的机器码**：计算机开机后，CPU 会首先读取硬盘的 MBR。MBR 中的机器码检查分区表，识别活动分区，假设活动分区是分区 1。
+  
+  **PBR的机器码**：MBR 将控制权交给分区 1 的第一个扇区（即 PBR）。PBR 中的引导程序负责加载操作系统的引导程序（例如，GRUB 或 Windows 启动管理器）。
+  
+  **操作系统引导程序**：PBR 会启动操作系统引导程序，操作系统的内核就会被加载到内存中，并完成操作系统的初始化。
+  
+* ![](/img/80856.jpg)
+
+* PBR和操作系统引导程序的关系：
+
+  * PBR 通常包含以下几部分内容：
+
+    - **引导程序（Boot Loader）**：
+      - 这是 PBR 中的主要内容，包含了用于引导操作系统的机器码。通常这个引导程序会非常小，负责将操作系统的更大部分（如启动管理器或操作系统内核）加载到内存中。
+      - 引导程序也会通过加载操作系统的启动管理器（如 **GRUB** 或 **Windows 引导程序**），进一步引导系统进入操作系统内核的启动过程。
+    - **文件系统信息**：
+      - PBR 中也可能包含一些与分区文件系统相关的信息，比如分区的类型（如 FAT32、NTFS、EXT4 等）和一些文件系统的启动信息，这样操作系统的引导程序才能理解如何访问分区内的数据。
+    - **操作系统引导程序的地址**：
+      - 在 PBR 中，引导程序会知道如何找到并加载操作系统的主引导程序。通常这包括操作系统内核或者启动管理器的文件路径和位置。这个过程对于多操作系统的启动至关重要。
+    - **引导记录签名**：
+      - PBR 的最后 2 字节通常是 **0x55AA**，这个签名用于验证该扇区是否有效。如果 PBR 中的签名正确，表示该分区有一个有效的引导记录，可以继续加载操作系统。否则，启动过程会失败。
+
+  * **PBR** 读取并执行内嵌的引导程序，该程序负责将操作系统的启动程序加载到内存中。
+
+    启动程序（如 **GRUB** 或 **Windows 引导程序**）加载操作系统的内核到内存并启动操作系统。
+
+  * **PBR** 是活动分区的第一个扇区，包含了启动操作系统所需的引导程序。
+
+    **PBR 中的引导程序**会加载操作系统的主引导程序（如 GRUB 或 Windows 启动管理器），进而启动操作系统。
+
+    **引导操作系统的程序**通常是非常小的，它的主要任务是将操作系统的核心部分加载到内存中，并确保操作系统能够正确启动。
+
 ### 1.6 虚拟机
 
 ##### 传统计算机
@@ -1914,6 +1974,12 @@ math: true
 
 ![](/img/235811.jpg)
 
+##### belady现象
+
+![](/img/140030.jpg)
+
+![](/img/6348832358558960856.jpg)
+
 #### 3.2.4 页面分配策略、抖动、工作集 
 
 ![](/img/010916.jpg)
@@ -2307,6 +2373,10 @@ math: true
 ![](/img/085853.jpg)
 
 * 最后一个分组的盘块数要比其他的分组的更少一块
+
+![](/img/200229.jpg)
+
+[【天勤考研】成组链接法_哔哩哔哩_bilibili](https://www.bilibili.com/video/BV1HE41167kj/?spm_id_from=333.337.search-card.all.click&vd_source=defcad5f62788968e79a5f75e0aca2f3)
 
 ###### 分配
 
