--- a/source/_posts/操作系统大题强化.md
+++ b/source/_posts/操作系统大题强化.md
@@ -1086,11 +1086,55 @@ reader(){
 
   * **MBR**是**磁盘的第一个扇区**，通常包含启动计算机所需要的引导程序。
 
+    * MBR 是硬盘的第一个扇区，其大小为 512 字节，通常位于硬盘的最前面。它独立于于任何分区，它是硬盘的“引导区域”，用于存储启动引导信息和硬盘的分区表。
+
     **PBR**是**每个分区的第一个扇区**，它包含启动该分区操作系统所需的引导信息。
 
   * **MBR**负责引导计算机启动，而**PBR**负责启动具体的分区操作系统。
-
+  
   * **MBR**包含的是**计算机启动代码**，而**PBR**是负责**分区操作系统的引导**。不同分区的PBR可以有所不同，尤其在**多操作系统的情况下，每个操作系统的PBR都是独立的**
+  
+  * **MBR** 中的机器码只负责引导加载分区并将控制权转移到活动分区的第一个扇区（PBR）。它并不直接启动操作系统，只是**启动引导过程**的第一步。
+  
+    **PBR** 是活动分区的引导记录，它的主要任务是**启动操作系统的引导程序**，如 GRUB 或 Windows 启动管理器，并将操作系统加载到内存中，最终启动操作系统。
+  
+  * **MBR的机器码**：计算机开机后，CPU 会首先读取硬盘的 MBR。MBR 中的机器码检查分区表，识别活动分区，假设活动分区是分区 1。
+  
+    **PBR的机器码**：MBR 将控制权交给分区 1 的第一个扇区（即 PBR）。PBR 中的引导程序负责加载操作系统的引导程序（例如，GRUB 或 Windows 启动管理器）。
+  
+    **操作系统引导程序**：PBR 会启动操作系统引导程序，操作系统的内核就会被加载到内存中，并完成操作系统的初始化。
+  
+  * MBR**根据分区表找到活动分区**，把控制权交给活动分区并指示继续读取该活动分区的第一个扇区即PBR
+  
+    而PBR**不需要再去查找其他扇区，它已经包含了操作系统的引导程序**，PBR 的引导程序会**加载操作系统的主引导程序**，例如 **GRUB**（Linux 系统的引导管理器）或 **Windows 启动程序**。
+  
+    **引导程序**接下来会加载操作系统的**内核**，并启动操作系统。
+  
+  * ![](/img/80856.jpg)
+  
+* PBR和操作系统引导程序的关系：
+
+  * PBR 通常包含以下几部分内容：
+
+    - **引导程序（Boot Loader）**：
+      - 这是 PBR 中的主要内容，包含了用于引导操作系统的机器码。通常这个引导程序会非常小，负责将操作系统的更大部分（如启动管理器或操作系统内核）加载到内存中。
+      - 引导程序也会通过加载操作系统的启动管理器（如 **GRUB** 或 **Windows 引导程序**），进一步引导系统进入操作系统内核的启动过程。
+    - **文件系统信息**：
+      - PBR 中也可能包含一些与分区文件系统相关的信息，比如分区的类型（如 FAT32、NTFS、EXT4 等）和一些文件系统的启动信息，这样操作系统的引导程序才能理解如何访问分区内的数据。
+    - **操作系统引导程序的地址**：
+      - 在 PBR 中，引导程序会知道如何找到并加载操作系统的主引导程序。通常这包括操作系统内核或者启动管理器的文件路径和位置。这个过程对于多操作系统的启动至关重要。
+    - **引导记录签名**：
+      - PBR 的最后 2 字节通常是 **0x55AA**，这个签名用于验证该扇区是否有效。如果 PBR 中的签名正确，表示该分区有一个有效的引导记录，可以继续加载操作系统。否则，启动过程会失败。
+
+  * **PBR** 读取并执行内嵌的引导程序，该程序负责将操作系统的启动程序加载到内存中。
+
+    启动程序（如 **GRUB** 或 **Windows 引导程序**）加载操作系统的内核到内存并启动操作系统。
+
+  * **PBR** 是活动分区的第一个扇区，包含了启动操作系统所需的引导程序。
+
+    **PBR 中的引导程序**会加载操作系统的主引导程序（如 GRUB 或 Windows 启动管理器），进而启动操作系统。
+
+    **引导操作系统的程序**通常是非常小的，它的主要任务是将操作系统的核心部分加载到内存中，并确保操作系统能够正确启动。
 
 ### UFS文件系统
 
@@ -1339,6 +1383,36 @@ reader(){
   ![](/img/192155.jpg)
 
   ![](/img/92355.jpg)
+
+#### 关于inode的调入
+
+对于 **第一次打开文件**，操作系统必须去硬盘读取对应的 **inode**，而不依赖于内存中的 **inode 缓存**。即使是其他 inode 已经被调入内存，只要是 **第一次打开文件**，操作系统都需要去硬盘读取该文件的 inode。下面我进一步澄清这个过程：
+
+1. **第一次打开文件时必须去硬盘读取 inode**：
+
+- 当进程请求打开一个文件时，**文件系统必须找到该文件的 inode**，而 inode 存储着文件的元数据。
+- **即使其他 inode 已经被加载到内存中**（比如在之前访问其他文件时已经调入），**操作系统也不能直接假设该文件的 inode 已经在内存中**。这是因为 inode 的存储是**按块（block）**来组织的，多个 inode 可能会被存储在同一个块中。操作系统在读取一个 inode 时，实际上是将该块从硬盘加载到内存中，而不是只读取一个单独的 inode。
+
+2. **inode 缓存的作用**：
+
+- 操作系统会将访问过的 inode 缓存到内存中的 **inode 缓存**，以提高后续访问同一文件时的效率。**如果 inode 已经在内存中，操作系统可以直接从内存中获取**。
+- 然而，**第一次打开文件时**，因为该文件的 inode 还没有被缓存到内存中，操作系统就必须去硬盘上查找和加载该 inode。
+
+3. **不存在“先查看内存”的步骤**：
+
+- 虽然操作系统会维护一个 **inode 缓存**，但它**并不在第一次打开文件时先检查内存**。操作系统在打开文件时会直接通过文件的路径来定位 inode（通常是通过目录项与 inode 的映射关系）。如果这个 inode 不在内存中，操作系统会去硬盘读取。
+- 只有当文件的 inode 被加载到内存中后，才会通过 **inode 缓存**来提高后续对同一文件的访问效率。
+
+4. **总结**：
+
+- **第一次打开文件时**，操作系统**必须去硬盘读取 inode**，并将其加载到内存中。
+- 即使**其他 inode 已经在内存中**，也不能影响第一次打开文件的过程，因为**每个 inode 都是单独按块存储的**，而且操作系统无法预先知道该 inode 是否已经在内存中。
+- **inode 缓存**只在后续访问同一文件时提供帮助，减少了磁盘 I/O 操作。
+
+举个简单例子：
+
+1. **第一次打开文件**时，操作系统必须去磁盘读取该文件的 inode。它会读取硬盘的目录结构，找到 inode 所在的块，将该块读取到内存中。
+2. 以后如果再次访问相同的文件，操作系统就可以直接从内存中的 inode 缓存中获取 inode，避免了磁盘读取。
 
 ### FAT文件系统
 
