--- a/source/_posts/每日一题.md
+++ b/source/_posts/每日一题.md
@@ -1239,7 +1239,7 @@ math: true
     * 读口（组合逻辑操作）：无需时钟控制，busA和busB分别由RA和RB给出地址。地址RA或RB有效后，经一个“取数时间（AccessTime）”，busA和busB有效
     * 写口（时序逻辑操作）：需要时钟控制。写使能为1的情况下，时钟边沿到来时，busW传来的值开始被写入RW指定的寄存器中。
 
-## 7.17
+## 7.17 时间复杂度和总线和I/O缓冲区
 
 ![ ](/img/0452985b-7810-4a82-9da8-9d858f536181.png)
 
@@ -1250,7 +1250,7 @@ math: true
 * 1
 * 3
 
-## 7.18
+## 7.18 双链表操作和流水线和内存分配策略和通信基础
 
 ![](/img/f44b8c23-b5d0-45e3-b383-49c9fc8ab1de.png)
 
@@ -1260,7 +1260,7 @@ math: true
 
 * 无
 
-## 7.19
+## 7.19 栈和Cache和文件的物理结构和数据链路层网络层设备
 
 ![](/img/0bfa15ee-5a64-4d9a-9094-b5ac2170d949.png)
 
@@ -1270,7 +1270,7 @@ math: true
 
 * 
 
-## 7.20
+## 7.20 快速排序和SRAM和分页存储管理方式和通信基础
 
 ![](/img/f316361d-be20-47ca-86b2-c6d6e2baca3f.png)
 
@@ -1280,7 +1280,7 @@ math: true
 
 * 无
 
-## 7.21
+## 7.21 堆排序和扩展操作码指令格式和I/O软件层次结构和三种交换方式
 
 ![](/img/d22f8ed0-9b18-498f-9fd2-7bdf19b340e1.png)
 
@@ -1292,13 +1292,61 @@ math: true
 * 4
   * 传输数据量只用在意时间内发送方能发送多少，不需要在意对方收没收到
 
-## 7.22
+## 7.22 哈希表和CPU的性能指标和操作系统发展历程和三种交换方式
 
 ![](/img/295ec504-9e40-4c5e-8ac6-6dd0d0a66ad5.png)
 
 ![](/img/Cache_-a3f3dca220e8f.png)
 
 错题：
+
+* 无
+
+## 7.23 B树和指令系统和共享内存通信和网络层
+
+![](/img/6c229994-9335-4c79-b8fc-b8505ae5a5da.png)
+
+![](/img/md2card-1753241094511-1(1).png)
+
+错题：
+
+* 4
+  * 虚电路只在网络层建立，TCP在传输层建立的只能叫可靠连接不能叫虚电路。
+  * 虚电路服务于点到点的通信而非端到端的通信，因此两台主机之间的多条虚电路服务于主机，主机可以分配不同进程使用不同虚电路，因此虚电路不单独为某个进程服务，而是为多个进程服务。
+    * 只有一条虚电路也可以为不同进程服务
+
+## 7.24 空间复杂度和数据的表示和操作系统概述和物理层
+
+![](/img/57b95390-b671-4e94-b2cb-56cc5cda0ef2.png)
+
+![](/img/Cache_-3aa4b8235ee54dee.png)
+
+错题：
+
+* 1
+* 4
+
+## 7.25 堆排序和CPU性能指标和进程调度算法和计算机网络的分类
+
+![](/img/df37b6bc-da52-4a4b-b6d5-7c31ed2e75aa.png)
+
+![](/img/87121dde-da56-4b54-bd81-6e55d6b59814.png)
+
+* 无
+
+## 7.26 后缀表达式和数据的运算电路和操作系统状态和物理层设备
+
+![](/img/f53ca5d0-751d-43d5-91e2-12fdcf4efeb8.png)
+
+![](/img/4c1f9c14-8218-4ce0-9bd4-1f981194169d.png)
+
+* 无
+
+## 7.27 栈和标志位和程序的连接和装入和物理层设备
+
+![](/img/cfae7155-234a-4dda-b73d-eca7a7f68b3e.png)
+
+![](/img/7b80c53e-236f-45ff-aff3-e410469094f2.png)
 
 * 无
 
@@ -1359,3 +1407,65 @@ math: true
 ### 考点：I/O端口及其编址
 
 ![](/img/30359.jpg)
+
+## 七月考试错题
+
+### 考点：操作系统结构——宏内核和微内核
+
+![](/img/201705.jpg)
+
+### 考点：操作系统的引导过程
+
+![](/img/215608.jpg)
+
+![](/img/215620.jpg)
+
+### 考点：进程调度
+
+![](/img/82506.jpg)
+
+### 考点：文件系统——文件的打开
+
+![](/img/183840.jpg)
+
+![](/img/185822.jpg)
+
+### 考点：文件的物理结构——IO次数
+
+![](/img/191123.jpg)
+
+### 考点：文件共享——硬链接和软连接
+
+![](/img/191803.jpg)
+
+![](/img/191815.jpg)
+
+### 考点：文件存储空间管理——空闲磁盘块的管理方法
+
+![](/img/94428.jpg)
+
+### 考点：I/O软件层次结构
+
+![](/img/203512.jpg)
+
+![](/img/03524.jpg)
+
+### 考点：TCP/IP模型
+
+![](/img/223313.jpg)
+
+### 考点：信道的极限容量——奈氏准则
+
+![](/img/24411.jpg)
+
+* 曼切斯特编码有两种码元0和1，需要1个二进制位来表示，因此曼切斯特编码的码元速率（波特率）是数据速率的两倍
+
+### 考点：数据链路层——组帧零比特填充法和差错控制CRC
+
+![](/img/125006.jpg)
+
+### 考点：子网划分——哈夫曼树
+
+![](/img/24853.jpg)
+
+![](/img/124905.jpg)
