--- a/source/_posts/计网大题强化.md
+++ b/source/_posts/计网大题强化.md
@@ -134,6 +134,9 @@ index_img: /img/1920x1080 (41).jpg
       * 当左边这台主机发出自己的IP数据报或者说IP分组的时候，只需要指明自己要发的这个IP分组的VCID，即通过哪一条虚电路进行转发
       * 当分组或者数据报经过A主机的时候，A主机这边会记录一个表，表包括VCID和下一跳
         * 不会检查IP数据报里的目的地址，检查的是虚电路号，然后通过虚电路号找到下一跳
+    * 虚电路只在网络层建立，TCP在传输层建立的只能叫可靠连接不能叫虚电路。
+    * 虚电路服务于点到点的通信而非端到端的通信，因此两台主机之间的多条虚电路服务于主机，主机可以分配不同进程使用不同虚电路，因此虚电路不单独为某个进程服务，而是为多个进程服务。
+      * 只有一条虚电路也可以为不同进程服务
 
     ![](/img/110114.jpg)
 
