--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -54,7 +54,31 @@ math: true
 
   ![](/img/221651.jpg)
 
+### 栈和队列和数组
+
+* 最适合用作链队的链表就是**带有队首指针和队尾指针的非循环单链表**
+* 循环队列的三种判满方式都需要额外的开销，需要牺牲一个队列空间
+* 三元组的内容为（行，列，值），其次还要存储稀疏矩阵和行列总数（否则无法分辨矩阵规模）和非零元素个数（三元组表的大小）。交换每个三元组的行列以外，还要交换总行和总列才可以实现转置
+* 十字链表法适合频繁插入删除和快速定位行列元素，三元组的存储效率一般低于十字链表
+
+#### 卡特兰数的应用
+
+![](/img/190334.jpg)
+
+![](/img/202106.jpg)
+
+* n个不同元素进栈，出栈元素不同排列的个数N可由卡特兰数确定
+* 先序序列为入栈次序，中序序列为出栈序列，因为前序序列和中序序列可以唯一确定一棵二叉树，因此**问先序序列为xxxx的不同二叉树的个数是？相当于问以xxxx为入栈次序，出栈序列的个数是？**
+* **进栈出栈操作与二叉树中序遍历的关系**
+  * 一个节点进栈后有两种处理方式：
+    * 要么立即出栈（此时该入栈结点没有左孩子），要么下一个结点进栈（有左孩子）
+  * 一个结点出栈后有两种处理方式
+    * 继续出栈（该结点无右孩子）
+    * 要么下一个结点进栈（有右孩子）
+
 ### 串
+
+* 普通匹配算法的时间复杂度为O(mn)，kmp算法时间复杂度为O(m+n)，如果每次匹配部分匹配都接近模式串长度n，那么普通匹配算法达到最坏时间复杂度O(mn)，相反普通匹配算法和kmp算法接近
 
 #### kmp算法小总结
 
@@ -118,6 +142,27 @@ int main(){
 * 上溢是指存储器满，还往里写，下溢是指存储器空，还往外读。
 
 ### 树
+
+![](/img/74229.jpg)
+
+* 只要按照前序序列的顺序入栈，那么无论怎么出栈，肯定是符合中序序列的
+
+* 原森林中每一个**分支节点**产生**唯一一个对应二叉树中没有右孩子的结点**，森林中**最右边子树的根节点在二叉树中也没有右孩子**，所以**原森林中分支节点个数+1=二叉树中没有右孩子的结点数量**
+
+* 任一二叉树的叶节点在先序、中序、后序遍历序列中相对位置一定是相同的。
+* 要交换二叉树的所有分支节点的左右子树的位置，利用前序或后序遍历框架解决最合适
+
+#### 二叉树的迭代遍历
+
+![](/img/74517.jpg)
+
+![](/img/174531.jpg)
+
+![](/img/174545.jpg)
+
+![](/img/174556.jpg)
+
+![](/img/73936.jpg)
 
 #### 根据遍历序列确定二叉树的形态
 
@@ -396,7 +441,7 @@ int main(){
   
 * ④加载主引导记录（MBR）
   计算机读取该设备的第一个扇区，也就是前512B（主引导记录MBR），如果这512B的最后两个字节是0x55和0xAA，说明这个设备可以用于启动；如果不是，表明设备不能用于启动，控制权于是被转交给启动顺序中的下一个设备，如无其他启动设备，就会死机。主引导记录的作用是告诉计算机到硬盘的哪一个位置去找操作系统。
-  主引导记录包括①调用操作系统的机器码②分区表③主引导记录签名
+  主引导记录包括①调用操作系统的机器码（找PBR活动分区）②分区表③主引导记录签名
   
 * ⑤扫描硬盘分区表，并加载硬盘活动分区。
   MBR包含硬盘分区表，硬盘分区表以特定的标识符区分活动分区和非活动分区（第一个字节如果为0x80，则代表该主分区是激活分区，控制权要转交给这个分区，n个分区中只能有一个是激活的）。主引导记录MBR扫描硬盘分区表，进而识别含有操作系统的硬盘分区（活动分区）。找到硬盘活动分区后，开始加载硬盘活动分区，将控制权交给活动分区。
