--- a/source/_posts/数据结构.md
+++ b/source/_posts/数据结构.md
@@ -1608,6 +1608,10 @@ for(int i = head;i!=-1;i=ne[i])
 
 ![](/img/220926.jpg)
 
+#### 2.4 链表的经典应用
+
+![](/img/201810.jpg)
+
 ## 第三章 栈、队列和数组
 
 ### 3.1 栈
@@ -1824,6 +1828,22 @@ typedef struct linknode{
 ```
 
 ![](/img/233451.jpg)
+
+##### 栈的两种实现方式的优缺点
+
+* 顺序表实现
+  * 优点
+    * 入栈和出栈的常数时间复杂度低
+    * 清空栈操作可以做到O(1)
+  * 缺点
+    * 需要预先申请好空间，当空间不足时，需要进行扩容
+* 链表实现
+  * 优点
+    * 不需要预先分配空间，在内存允许的范围内，可以一直入栈，没有顺序表的限制。
+  * 缺点
+    * 入栈和出栈的常数时间复杂度略高，每插入一个元素都需要申请空间，每删除一个元素都要释放空间
+    * 清空栈的操作是O(n)的
+    * 直接将栈顶指针置空会导致内存泄漏
 
 ### 3.2 队列
 
