--- a/source/_posts/时间复杂度特集.md
+++ b/source/_posts/时间复杂度特集.md
@@ -9,6 +9,8 @@ index_img: /img/1920x1080 (28).jpg
 
 # 定义法计算时间复杂度
 
+![](/img/6895fabc5a41d1fdfb8bf6d5(1).jpg)
+
 ## 单层循环
 
 ### O(n)
@@ -79,3 +81,9 @@ index_img: /img/1920x1080 (28).jpg
 * 主定理
 
 ![](/img/222528.jpg)
+
+## 重点比较
+
+![](/img/24759.jpg)
+
+![](/img/224765741.jpg)
