--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -1371,6 +1371,27 @@ int prim(){
 }
 ```
 
+#### 408图论算法复杂度+适用场景（含负权边/负环）
+
+| 算法 / 存储结构                   | 时间复杂度            | 空间复杂度 | 适用场景                                                     | 说明                                      |
+| --------------------------------- | --------------------- | ---------- | ------------------------------------------------------------ | ----------------------------------------- |
+| **邻接矩阵**                      | ——                    | **O(V²)**  | 稠密图                                                       | 查询边是否存在快 O(1)，遍历慢 O(V)        |
+| **邻接表**                        | ——                    | **O(V+E)** | 稀疏图                                                       | 遍历快 O(V+E)，查询边是否存在慢 O(deg(v)) |
+| **十字链表**（有向图）            | ——                    | **O(V+E)** | 需要同时高效处理出度和入度的有向图                           | 每条边存两次引用                          |
+| **邻接多重表**（无向图）          | ——                    | **O(V+E)** | 需要避免无向边重复存储                                       | 每条边只存一次结点                        |
+| **DFS（邻接表）**                 | O(V+E)                | O(V+E)     | 遍历所有顶点与边；拓扑排序；连通分量；检测环                 | 深度优先搜索                              |
+| **DFS（邻接矩阵）**               | O(V²)                 | O(V²)      | 小规模稠密图遍历                                             | 遍历邻接点需扫一行                        |
+| **BFS（邻接表）**                 | O(V+E)                | O(V+E)     | 无权图最短路径；分层遍历；连通分量                           | 广度优先搜索                              |
+| **BFS（邻接矩阵）**               | O(V²)                 | O(V²)      | 小规模稠密图遍历                                             |                                           |
+| **Prim 算法（朴素版，邻接矩阵）** | O(V²)                 | O(V²)      | 稠密图最小生成树                                             | 每次扫描所有顶点选最小边                  |
+| **Prim 算法（堆优化版，邻接表）** | O(E log V)            | O(V+E)     | 稀疏图最小生成树                                             | 用优先队列维护候选边                      |
+| **Kruskal 算法**                  | O(E log E)≈O(E log V) | O(V+E)     | 稀疏图最小生成树                                             | 边排序 + 并查集                           |
+| **Dijkstra（朴素版，邻接矩阵）**  | O(V²)                 | O(V²)      | 稠密图，单源最短路径（**不允许负权边**）                     | 每次找最近点 O(V)                         |
+| **Dijkstra（堆优化，邻接表）**    | O(E log V)            | O(V+E)     | 稀疏图，单源最短路径（**不允许负权边**）                     | 用堆维护最短距离                          |
+| **Floyd 算法**                    | O(V³)                 | O(V²)      | 多源最短路径，小规模稠密图，**允许负权边**；可检测负环（`dist[i][i]<0`） | 若有负环则无解                            |
+| **Bellman-Ford 算法**             | O(VE)                 | O(V+E)     | 单源最短路径，**允许负权边**；可检测负环（松弛 V 次后仍变化） | 若有负环则无解                            |
+| **SPFA 算法**                     | 平均 O(E)，最坏 O(VE) | O(V+E)     | 单源最短路径，**允许负权边**；可检测负环（某点入队 ≥ V 次）  | 若有负环则无解                            |
+
 ### 排序的一些代码模板
 
 #### 快速排序
