--- a/source/_posts/408错漏知识.md
+++ b/source/_posts/408错漏知识.md
@@ -198,6 +198,53 @@ int main(){
 | **Bellman-Ford 算法**             | O(VE)                 | O(V+E)     | 单源最短路径，**允许负权边**；可检测负环（松弛 V 次后仍变化） | 若有负环则无解                            |
 | **SPFA 算法**                     | 平均 O(E)，最坏 O(VE) | O(V+E)     | 单源最短路径，**允许负权边**；可检测负环（某点入队 ≥ V 次）  | 若有负环则无解                            |
 
+| 算法 / 存储结构                   | 时间复杂度            | 空间复杂度 | 适用场景                                                     | 说明                                      |
+| --------------------------------- | --------------------- | ---------- | ------------------------------------------------------------ | ----------------------------------------- |
+| **邻接矩阵**                      | ——                    | **O(V²)**  | 稠密图                                                       | 查询边是否存在快 O(1)，遍历慢 O(V)        |
+| **邻接表**                        | ——                    | **O(V+E)** | 稀疏图                                                       | 遍历快 O(V+E)，查询边是否存在慢 O(deg(v)) |
+| **十字链表**（有向图）            | ——                    | **O(V+E)** | 需要同时高效处理出度和入度的有向图                           | 每条边存两次引用                          |
+| **邻接多重表**（无向图）          | ——                    | **O(V+E)** | 需要避免无向边重复存储                                       | 每条边只存一次结点                        |
+| **DFS（邻接表）**                 | O(V+E)                | O(V+E)     | 遍历所有顶点与边；拓扑排序；连通分量；检测环                 | 深度优先搜索                              |
+| **DFS（邻接矩阵）**               | O(V²)                 | O(V²)      | 小规模稠密图遍历                                             | 遍历邻接点需扫一行                        |
+| **BFS（邻接表）**                 | O(V+E)                | O(V+E)     | 无权图最短路径；分层遍历；连通分量                           | 队列实现                                  |
+| **BFS（邻接矩阵）**               | O(V²)                 | O(V²)      | 小规模稠密图遍历                                             |                                           |
+| **拓扑排序（邻接表）**            | O(V+E)                | O(V+E)     | **DAG 的线性序**；任务调度；编译依赖                         | 常用 Kahn 算法（队列）或 DFS              |
+| **拓扑排序（邻接矩阵）**          | O(V²)                 | O(V²)      | 小规模稠密图                                                 | 每次找入度=0 需扫一列                     |
+| **Prim 算法（朴素版，邻接矩阵）** | O(V²)                 | O(V²)      | 稠密图最小生成树                                             | 每次扫描所有顶点选最小边                  |
+| **Prim 算法（堆优化版，邻接表）** | O(E log V)            | O(V+E)     | 稀疏图最小生成树                                             | 用优先队列维护候选边                      |
+| **Kruskal 算法**                  | O(E log E)≈O(E log V) | O(V+E)     | 稀疏图最小生成树                                             | 边排序 + 并查集                           |
+| **Dijkstra（朴素版，邻接矩阵）**  | O(V²)                 | O(V²)      | 稠密图，单源最短路径（**不允许负权边**）                     | 每次找最近点 O(V)                         |
+| **Dijkstra（堆优化，邻接表）**    | O(E log V)            | O(V+E)     | 稀疏图，单源最短路径（**不允许负权边**）                     | 用堆维护最短距离                          |
+| **Floyd 算法**                    | O(V³)                 | O(V²)      | 多源最短路径，小规模稠密图，**允许负权边**；可检测负环（`dist[i][i]<0`） | 若有负环则无解                            |
+| **Bellman-Ford 算法**             | O(VE)                 | O(V+E)     | 单源最短路径，**允许负权边**；可检测负环（松弛 V 次后仍变化） | 若有负环则无解                            |
+| **SPFA 算法**                     | 平均 O(E)，最坏 O(VE) | O(V+E)     | 单源最短路径，**允许负权边**；可检测负环（某点入队 ≥ V 次）  | 若有负环则无解                            |
+
+#### 关键路径的相关计算
+
+* 事件Vk的最早发生时间Ve(k)
+  * 即**max{以k结点为弧头的所有边 的弧尾事件 的最早发生时间+该边权值}**
+  * 计算该值时，可以从前往后，从源点出发，每输出一个入度为0的顶点时，计算它所有直接后继顶点的最早发生时间，如果大于则更新
+* 事件Vk的最迟发生时间Vl(k)
+  * 即**min{以k为弧尾的所有边 的弧头事件 的最迟发生时间-该边权值}**
+  * 计算该值时，可以从后往前，从汇点（终点）出发，利用记录拓扑序列的栈，从栈顶出发，以此计算所有直接前驱节点k的最迟发生时间，小于则更新
+* 活动Ai的最早开始时间E(i)
+  * **E(i)=Ve(k)**，**Vk是弧尾事件**，因为只有事件Vk能开始做，活动Ai才能开始做
+* 活动Ai的最迟开始时间L(i)
+  * **L(i)=Vl(j)-Weight(Vk,Vj)**
+  * 即**该边弧头活动的最迟发生时间-该边的权值**
+* 活动Ai完成的时间余量D(i)
+  * **D(i)=l(i)-e(i)**
+  * **活动余量为0/最迟开始时间=最早开始时间的活动是关键活动**
+* 顺序
+  * **从源点出发，先求Ve()**
+  * **再从汇点出发，求Vl()**
+  * **根据Ve()求E()**
+  * **根据Vl求L()**
+  * **求AOE网中所有活动的差额D，并找出D为0的活动构成关键路径**
+* **只有加快包括在所有关键路径上的关键活动才能达到缩短工期的目的**
+
+![](/img/203930.jpg)
+
 ### 查找
 
 #### 平衡二叉树(AVL)
