--- a/source/_posts/数据结构算法笔试.md
+++ b/source/_posts/数据结构算法笔试.md
@@ -2792,6 +2792,13 @@ int main()
   * 所有点的度数不为1
   * 一定有一个最优解，使得权值最小的两个点互为兄弟
 
+### 图
+
+* 邻接多重表**理论上**找无向图的反向边比邻接表方便
+* 十字链表是对邻接矩阵的优化，实际上也可以存无向图
+* 邻接矩阵和十字链表无法存重边，邻接表和邻接多重表可以存重边
+* 三元组表也能存重边
+
 ## 算法题刷题
 
 题表：
